--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
-title: devlopr
-subtitle: A Jekyll Theme Built for Developers
+title: Isaac Hawkins
+subtitle: 
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a Jekyll Theme Built For Developers
-
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
+  
+url: "isaachawkins.com" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
@@ -11,72 +10,80 @@ urls:
       url: /about
     - text: Blog
       url: /blog
-    - text: Gallery
-      url: /gallery
-    - text: Shop
-      url : /shop
-    - text: Contact Me
-      url : /contact
-    - text: Styleguide
-      url: /styleguide
-    - text: Get Started
-      url: /get-started
 
 # Edit these details
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "johndoe@gmail.com"
-author_location: India
-author_website_url: "http://johndoe.com"
-typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
+author: Isaac Hawkins
+author_bio: Developer/IT specialist
+author_email: "isaac.g.hawkins@gmail.com"
+author_location: Australia
+author_website_url: "http://isaachawkins.com"
+typewrite-text: 3D Art, Software Development and Computer Science Rants and other musings
 
 author_work_experiences:
-            - company_name: Google
-              company_logo: google.png
-              company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
+            - company_name: DibaIT
+              designation: Technical Consultant
+              description: Consultant for purchase, development and deployment of critical Technologies
               visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
+            - company_name: Rooksta
+              #company_logo: microsoft.png
+              #company_url: https://microsoft.com
+              designation: Developer/Database Engineer
+              description: Development of web-based social media platform using Flask and Bootstrap CSS
+              visibility: true
+            - company_name: Gap Movement
+            #company_logo: microsoft.png
+            #company_url: https://microsoft.com
+              designation: Developer/Database Engineer
+              description: Development of web based tools to query and collect data securely into a Database using Node JS and Angular
+              visibility: true
+            - company_name: YelowMarket
+            #company_logo: microsoft.png
+            #company_url: https://microsoft.com
+              designation: Developer/Database Engineer
+              description: Development of CRUD API and interface in Node.js and Angular
               visibility: true
 
 author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
+              - college_logo: RMITUniversity.png
+                college_name: RMIT
+                college_url: https://www.rmit.edu.au/
+                college_degree: Information Technology
+                description: Diploma of Information Technology
                 visibility: true
 
-author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
-                visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
-                visibility: true
+              - college_logo: DeakinUniversity.png 
+                college_name: Deakin
+                college_url: https://www.deakin.edu.au/
+                college_degree: Electrical and Electronics Engineering
+                description: Bachelor of Electrical and Electronics Engineering
+                visibility: true 
+
+
+#author_project_details:
+#             - project_thumbnail: gamershub.png
+#               project_title: Gamers Hub
+#               project_description: A Platform built for Gamers and Game Devs
+#               project_url: https://gamershub.in
+#               visibility: true
+#             - project_thumbnail: hack4r.PNG
+#               project_title: Hack4r
+#               project_description: A Platform built for Hackers and Penetration Testers
+#               project_url: https://hack4r.com
+#               visibility: true
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+#twitter_username: johndoe
+github_username:  Jelly-Fish-Dev
+#facebook_username: johndoe
+#linkedin_username: johndoe
+#behance_username: johndoe
+instagram_username: jelly3dblend
+#medium_username: johndoe
+#telegram_username: johndoe
+#dribbble_username: johndoe
+#flickr_username: johndoe
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
@@ -84,13 +91,13 @@ flickr_username: johndoe
 hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+#wakatime_username: sujaykundu777
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+#mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
-formspree_email: johndoe@gmail.com
+#formspree_email: johndoe@gmail.com
 
 # syntax highlighter
 markdown: kramdown
@@ -103,12 +110,12 @@ show_author_education_details: true
 show_author_project_details: true
 
 # algolia search
-algolia:
-  application_id: D9WA1YKTRQ
-  index_name: blog_posts # You can replace that with whatever name you want
-  files_to_exclude: []
-  nodes_to_index: 'article'
-  search_only_api_key: 58ffdd7cd6c45ec1577a7fcd789b1b9a
+#algolia:
+#  application_id: D9WA1YKTRQ
+#  index_name: blog_posts # You can replace that with whatever name you want
+#  files_to_exclude: []
+#  nodes_to_index: 'article'
+#  search_only_api_key: 58ffdd7cd6c45ec1577a7fcd789b1b9a
 
 # pagination of posts
 paginate: 4
